Add missing Github token to access the release
Signed-off-by: Titouan Christophe <titouan.christophe@railnova.eu>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,8 @@ jobs:
         if: github.event_name == 'release'
         id: get_release
         uses: bruceadams/get-release@v1.2.2
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
 
       - name: Build
         run: make
@@ -26,6 +28,8 @@ jobs:
       - name: Publish release asset
         if: github.event_name == 'release'
         uses: actions/upload-release-asset@v1.0.2
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
         with:
           upload_url: ${{ steps.get_release.outputs.upload_url }}
           asset_path: zynq-bit2bin
